refactor: add resource to the team route returns and add request validation to the create and update a team routes.
