# app/Http/Controllers/Api/TeamsController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Team\StoreTeamRequest;
+use App\Http\Requests\Team\TeamRequest;
 use App\Services\TeamService;
 
 use Illuminate\Http\Request;
@@ -50,9 +51,6 @@ class TeamsController extends Controller
      *                  @OA\Property(property="country", type="string", example="Country 1"),
      *                  @OA\Property(property="coach", type="string", example="Coach 1"),
      *                  @OA\Property(property="league", type="string", example="League 1"),
-     *                  @OA\Property(property="active", type="boolean", example="true"),
-     *                  @OA\Property(property="created_at", type="string", example="2023-01-01T00:00:00.000000Z"),
-     *                  @OA\Property(property="updated_at", type="string", example="2023-01-01T00:00:00.000000Z")
      *              )
      *         )
      *     ),
@@ -90,24 +88,6 @@ class TeamsController extends Controller
      *              @OA\Property(property="country", type="string", example="Country 1"),
      *              @OA\Property(property="coach", type="string", example="Coach 1"),
      *              @OA\Property(property="league", type="string", example="League 1"),
-     *              @OA\Property(property="active", type="boolean", example="true"),
-     *              @OA\Property(property="created_at", type="string", example="2023-01-01T00:00:00.000000Z"),
-     *              @OA\Property(property="updated_at", type="string", example="2023-01-01T00:00:00.000000Z"),
-     *              @OA\Property(property="players", type="array",
-     *                  @OA\Items(
-     *                      type="object",
-     *                      @OA\Property(property="id", type="string", example="1"),
-     *                      @OA\Property(property="name", type="string", example="Player 1"),
-     *                      @OA\Property(property="age", type="integer", example="25"),
-     *                      @OA\Property(property="height", type="integer", example="180"),
-     *                      @OA\Property(property="weight", type="integer", example="80"),
-     *                      @OA\Property(property="position", type="string", example="Center"),
-     *                      @OA\Property(property="league", type="string", example="League 1"),
-     *                      @OA\Property(property="team_id", type="string", example="1"),
-     *                      @OA\Property(property="created_at", type="string", example="2023-01-01T00:00:00.000000Z"),
-     *                      @OA\Property(property="updated_at", type="string", example="2023-01-01T00:00:00.000000Z")
-     *                  )
-     *              )
      *         )
      *     ),
      *     @OA\Response(
@@ -164,8 +144,6 @@ class TeamsController extends Controller
      *              @OA\Property(property="country", type="string", example="Country 1"),
      *              @OA\Property(property="coach", type="string", example="Coach 1"),
      *              @OA\Property(property="league", type="string", example="League 1"),
-     *              @OA\Property(property="created_at", type="string", example="2023-01-01T00:00:00.000000Z"),
-     *              @OA\Property(property="updated_at", type="string", example="2023-01-01T00:00:00.000000Z")
      *         )
      *     ),
      *     @OA\Response(
@@ -184,7 +162,7 @@ class TeamsController extends Controller
      *      ),
      * )
      */
-    public function store(StoreTeamRequest $request)
+    public function store(TeamRequest $request)
     {
         $request->validated();
 
@@ -231,9 +209,6 @@ class TeamsController extends Controller
      *              @OA\Property(property="country", type="string", example="Country 1"),
      *              @OA\Property(property="coach", type="string", example="Coach 1"),
      *              @OA\Property(property="league", type="string", example="League 1"),
-     *              @OA\Property(property="active", type="boolean", example="true"),
-     *              @OA\Property(property="created_at", type="string", example="2023-01-01T00:00:00.000000Z"),
-     *              @OA\Property(property="updated_at", type="string", example="2023-01-01T00:00:00.000000Z")
      *         )
      *     ),
      *     @OA\Response(
@@ -268,7 +243,7 @@ class TeamsController extends Controller
      *     ),
      * )
      */
-    public function update(StoreTeamRequest $request, string $id)
+    public function update(TeamRequest $request, string $id)
     {
         $request->validated();
 
